# jetson

./: .gitignore  ESTADO_PROYECTO.md  JETSON_SETUP.md  POSIBLES_PROBLEMAS.md  QUICKSTART.md  README.md  RESUMEN.md  config.py
jetson_cpp/: CMakeLists.txt  README.md  dqn_agent.cpp  main.cpp
jetson_cpp/apps/: train_robot.cpp  train_simulation.cpp
jetson_cpp/include/dqn/: agent.h  network.h  replay_buffer.h  types.h
jetson_cpp/include/environment/: cartpole_env.h  lego_robot_env.h
jetson_cpp/include/utils/: logger.h  metrics.h
jetson_cpp/src/environment/: environment_interface.cpp
jetson_cpp/src/utils/: config_parser.cpp  logger.cpp
jetson_test/: .gitignore  CMakeLists.txt  FIX_LIBTORCH_ERROR.md  INSTRUCCIONES_EJECUCION.md  QUICKSTART.md  README.md  SOLO_DQN.md  VERIFICACION_COMPILACION.md  grupo.txt
jetson_test/.git_backup/: config  index  packed-refs
jetson_test/.git_backup/objects/pack/: pack-b153bb3b90ffa336c877fe30cfd2523dd41c0040.idx  pack-b153bb3b90ffa336c877fe30cfd2523dd41c0040.pack  pack-b153bb3b90ffa336c877fe30cfd2523dd41c0040.rev
jetson_test/.git_backup/refs/heads/: main
jetson_test/apps/: inference.cpp  test_bluetooth.cpp  train.cpp
jetson_test/configs/: hyperparameters.yaml
jetson_test/include/communication/: bluetooth_manager.h  protocol.h
jetson_test/include/environment/: environment_interface.h
jetson_test/include/utils/: config_parser.h
jetson_test/scripts/: build.sh  fix_libtorch_arm64.sh  setup_jetson.sh
jetson_test/src/communication/: bluetooth_manager.cpp  protocol.cpp
jetson_test/src/dqn/: agent.cpp  network.cpp  replay_buffer.cpp
jetson_test/src/environment/: cartpole_env.cpp  lego_robot_env.cpp
jetson_test/src/utils/: metrics.cpp
jetson_test/tests/: test_environment.cpp  test_network.cpp  test_replay_buffer.cpp
laptop/: bridge.py  bridge_log_20251217_165554.txt  bridge_log_20251217_165641.txt  check_ev3.py  ev3_controller.py  test_bridge_sender.py  test_direction.py  test_ev3_api.py  test_gyro.py  test_motor_speed.py  test_sender.py
